--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,20 @@
 body {
   text-align: center;
-  background-color: #011F3F;
+  background-color: #011f3f;
+  height: 90vh;
 }
 
 #level-title {
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   font-size: 3rem;
-  margin:  5%;
-  color: #FEF2BF;
+  margin: 4.5%;
+  color: #fef2bf;
 }
 
 .container {
   display: block;
   width: 50%;
   margin: auto;
-
 }
 
 .btn {
@@ -50,4 +50,41 @@ body {
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
+}
+
+/* FOOTER */
+footer {
+  color: #dbedf3;
+  font-family: "VT323", monospace;
+  margin-top: 2%;
+}
+.icon {
+  margin: 1.5%;
+}
+
+.author {
+  color: eeeeee;
+  margin: 1% 0 0;
+}
+
+.author-link {
+  color: #eeeeee;
+  text-decoration: none;
+  margin: 0 1%;
+}
+
+.author-link:hover {
+  text-decoration: underline;
+  color: rgb(255, 255, 255);
+}
+
+.author-links {
+  display: flex;
+  justify-content: center;
+  margin: 1% 0 0;
+  padding: 0;
+}
+
+.list-link {
+  list-style-type: none;
 }
